Fix alignment issue and update friend functionality

--- a/quasar-project/src/css/app.scss
+++ b/quasar-project/src/css/app.scss
@@ -80,7 +80,6 @@ label {
 .flex {
   display: flex;
   flex-wrap: wrap;
-  align-content: start;
 }
 
 .q-uploader .q-btn {
